lab-10-eks/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-api
  namespace: wallet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wallet-api
  template:
    metadata:
      labels:
        app: wallet-api
    spec:
      containers:
        - name: wallet-api
          image: ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/csnp-platform-wallet-api:REPLACE_SHA
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
